@@ -2,6 +2,7 @@
 ---
 - mpg123-id3dump --no-scan; for speedup
 - hide -C parameter from mpg123 --help when it is not supported
+- added tinyalsa Output (by Jarno Lehtinen)
 
 1.16.0
 ---
